--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/*
 body {
     background:#ededed;
+}
+*/
+body, html {
+	height: 100%
+}
+.bg {
+	background-image: url("../img/background.png");
+
+	height: 100%;
+
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
